[tool.poetry]
name = "raknet-python"
description = "Python bindings to rust-raknet native library."
authors = ["b23r0 <b23r0@foxmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/b23r0/raknet-python"
keywords = ["raknet", "udp", "minecraft"]

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"